[gd_scene load_steps=3 format=3 uid="uid://ccd0mrmehwxa6"]

[ext_resource type="Script" path="res://scripts/ui/LevelSelect.gd" id="1_isnwf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fwe0g"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isnwf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.113725, 0.176471, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 256

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="LevelsText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Levels"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 3

[node name="PanelContainer1" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="Level1" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer1"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 1"

[node name="HighScore1" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="HighScore2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level2" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 2"

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="HighScore3" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level3" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 3"

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="HighScore4" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer4"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level4" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer4"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 4"

[node name="PanelContainer5" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="HighScore5" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer5"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level5" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer5"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 5"

[node name="PanelContainer6" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="HighScore6" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer6"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level6" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer6"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 6"

[node name="PanelContainer7" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="HighScore7" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer7"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level7" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer7"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 7"

[node name="PanelContainer8" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2

[node name="HighScore8" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer8"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level8" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer8"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 8"

[node name="PanelContainer9" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="HighScore9" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer9"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "High Score: n"
horizontal_alignment = 1

[node name="Level9" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer9"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwe0g")
text = "Level 9"

[node name="BackToMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"
